--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,12 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: checkout repo content
+          uses: actions/checkout@v2 # checkout the repository content to github runner.
+            - name: setup python
+              uses: actions/setup-python@v2
+              with:
+                python-version: 3.8 #install the python needed
+            - name: execute py script # run the run.py to get the latest data
+              run: |
+                python run.py
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
