--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,16 @@ jobs:
       - name: execute py script # run the run.py to get the latest data
         run: |
           python run.py
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: switching from HTTPS to SSH
+        run: git remote set-url origin ${{ secrets.SSH_SECRET }}
+      - name: check for changes
+        run: git status
+      - name: stage changed files
+        run: git add .
+      - name: commit changed files
+        run: git commit -m "Auto updating file"
+      - name: fetch from master
+        run: git fetch origin master
+      - name: push code to master
+        run: git push origin HEAD:master
       - run: echo "🍏 This job's status is ${{ job.status }}."
