--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,10 +4,9 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner.
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: setup python
         uses: actions/setup-python@v2
         with:
@@ -15,16 +14,20 @@ jobs:
       - name: execute py script # run the run.py to get the latest data
         run: |
           python run.py
-      - name: switching from HTTPS to SSH
-        run: git remote set-url origin ${{ secrets.SSH_SECRET }}
-      - name: check for changes
-        run: git status
-      - name: stage changed files
-        run: git add .
-      - name: commit changed files
-        run: git commit -m "Auto updating file"
-      - name: fetch from master
-        run: git fetch origin master
-      - name: push code to master
-        run: git push origin HEAD:master
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: readme.update
+      steps:
+        - uses: actions/checkout@v2
+          with:
+            ref: ${{ github.head_ref }}
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+      - name: execute py script # run the run.py to get the latest data
+        run: |
+          python run.py
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: readme update
