--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Reformat Power BI Assets
+name: Deploy Assets
 on: [pull_request]
 #on:
 #  push:
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8 #install the python needed
+      - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
       - name: execute py script # run the run.py to get the latest data
         run: |
           python .github/scripts/run.py ${{ steps.files.outputs.all }}
