final test - deploy on push to master

--- a/.github/workflows/deploy_report.yaml
+++ b/.github/workflows/deploy_report.yaml
@@ -1,9 +1,8 @@
 name: Deploy Assets
-on: [pull_request]
-#on:
-#  push:
-#    branches:
-#      - master
+on:
+  push:
+    branches:
+      - master
 jobs:
   Deploy-Asset:
     runs-on: ubuntu-latest
