--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,7 @@ jobs:
         uses: jitterbit/get-changed-files@v1
       - name: Power BI VC Utils
         uses: nathangiusti/Power-BI-VC-Utils@v1.1
+        with:
           files: ${{ steps.files.outputs.all }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
