--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
       - name: Changed files
+        id: changed-files
         uses: tj-actions/changed-files@v11.7
       - name: List all modified files
         run: |
