--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Changed files
         id: changed-files
         uses: tj-actions/changed-files@v11.7
+        with:
+          since_last_remote_commit: 'true'
       - name: List all modified files
         run: |
           for file in ${{ steps.changed-files.outputs.all_modified_files }}; do
