--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,16 +10,11 @@ jobs:
           fetch-depth: 1
       - name: Changed files
         id: changed-files
-        uses: tj-actions/changed-files@v11.7
-      - name: List all modified files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_modified_files }}; do
-            echo "$file was modified"
-          done
+        uses: jitterbit/get-changed-files@v1
       - name: Power BI VC Utils
         uses: nathangiusti/Power-BI-VC-Utils@v2.1
         with:
-          files: ${{ steps.changed-files.outputs.all_modified_files }}
+          files: ${{ steps.files.outputs.all }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Reformatted files for VC
