--- a/.github/workflows/format_json.yml
+++ b/.github/workflows/format_json.yml
@@ -7,12 +7,19 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-      - id: files
-        uses: jitterbit/get-changed-files@v1
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v11.9
+
+      - name: List all modified files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_modified_files }}; do
+            echo "$file was modified"
+          done
       - name: Power BI VC Utils
         uses: nathangiusti/Power-BI-VC-Utils@v1.0
         with:
-          files: ${{ steps.files.outputs.all }}
+          files: ${{ steps.changed-files.outputs.all_modified_files }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Reformatted files for VC
