--- a/.github/workflows/format_json.yml
+++ b/.github/workflows/format_json.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          fetch-depth: 0 
           ref: ${{ github.head_ref }}
       - name: Get changed files
         id: changed-files
