--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,18 +4,6 @@ jobs:
   Reformat-Power-BI-Assets:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v12
-        with:
-          separator: ","
-      - name: Power BI VC Utils
-        uses: nathangiusti/Power-BI-VC-Utils@v2.2
-        with:
-          files: ${{ steps.files.outputs.all }}
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Reformatted files for VC
+        - name: PBIX Deserializer
+          uses: nathangiusti/PBIX-Deserializer@v1.1
+
