is config file right now?

--- a/.github/workflows/te-change-bug.yaml
+++ b/.github/workflows/te-change-bug.yaml
@@ -21,12 +21,5 @@ jobs:
           tenant_id: "cef04b19-7776-4a94-b89b-375c77a8f936"
           config_file: ".github/config/deploy_config.yaml"
         env:
-          CLIENT_ID: ${{ secrets.NON_PROD_SPN_ID }}
-          CLIENT_SECRET: ${{ secrets.NON_PROD_SPN_SECRET }}
-
-      - name: List all changed files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
-
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
