--- a/.github/workflows/te-change-bug.yaml
+++ b/.github/workflows/te-change-bug.yaml
@@ -1,32 +1,30 @@
-name: Deploy to test
+name: Reformat Power BI Assets
 on: [pull_request]
 jobs:
-  Deploy-Asset:
+  Reformat-Power-BI-Assets:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Checkout private actions
+        uses: actions/checkout@v3                      
+        with:
+          repository: ab-inbev-labs/powerbi-actions
+          ref: main
+          token: ${{ secrets.CHAD_TEST }} 
+          path: .github/workflows
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v19
         with:
           separator: ","
-          quotepath: "false"
-      - name: Power BI Workspace Deploy
-        uses: nathangiusti/Power-BI-Workspace-Deploy@main
+          quotepath: true
+      - name: Power BI VC Utils
+        uses: ./.github/workflows/deserialize-pbix
         with:
           files: ${{ steps.changed-files.outputs.all_modified_files }}
           separator: ","
-          tenant_id: "cef04b19-7776-4a94-b89b-375c77a8f936"
-          config_file: "./github/config/deploy_config.yaml"
-        env:
-          CLIENT_ID: ${{ secrets.NON_PROD_SPN_ID }}
-          CLIENT_SECRET: ${{ secrets.NON_PROD_SPN_SECRET }}
-
-      - name: List all changed files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
-
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Reformatted files for VC
