--- a/.github/workflows/deploy_report_to_test.yaml
+++ b/.github/workflows/deploy_report_to_test.yaml
@@ -7,5 +7,5 @@ jobs:
       tenant_id: cef04b19-7776-4a94-b89b-375c77a8f936
       config_file: .github/config/report_deploy_config.yaml
     secrets:
-      client_id: ${{ secrets.NON_PROD_SPN_ID }}
-      client_secret: ${{ secrets.NON_PROD_SPN_SECRET }} 
+      client_id: ${{ secrets.CLIENT_ID }}
+      client_secret: ${{ secrets.CLIENT_SECRET }} 
