--- a/.github/workflows/deploy_dataset_to_test.yaml
+++ b/.github/workflows/deploy_dataset_to_test.yaml
@@ -10,5 +10,5 @@ jobs:
       deploy_roles: true
       deploy_partitions: true
     secrets:
-      client_id: ${{ secrets.NON_PROD_SPN_ID }}
-      client_secret: ${{ secrets.NON_PROD_SPN_SECRET }}
+      client_id: ${{ secrets.CLIENT_ID }}
+      client_secret: ${{ secrets.CLIENT_SECRET }}
